# info-portal

./: .env.codespace  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODESPACE_502_FIX.md  CODESPACE_STARTUP.sh  CODESPACE_STARTUP_COMMANDS.md  CONTRIBUTING.md  CRITICAL_CODESPACE_FIX.md  DEPLOYMENT.md  DESIGN_SYSTEM_V2.md  EXECUTIVE_FRONTEND_TESTING_SUMMARY.html  FINAL_CODESPACE_SOLUTION.md  FINAL_FRONTEND_TEST_REPORT_20250827_201824.html  FINAL_FRONTEND_TEST_REPORT_20250827_202010.html  FINAL_SOLUTION.md  GITHUB_CODESPACE_FINAL_FIX.md  GITHUB_SETUP.md  GITHUB_SYNC_INSTRUCTIONS.md  INSTANT_CODESPACE_FIX.sh  MULTI_AGENT_ANALYSIS_REPORT.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_SECURITY_REPORT.md  README.md  TEST_REPORT.md  advanced_testing_suite.py  benchmark_results_20250827_204638.json  browser_screenshot_service.py  checkbox_debug_report_20250827_200931.html  checkbox_debug_report_20250827_202010.html  checkbox_fix_validation_20250827_201411.html  checkbox_fix_validation_20250827_202009.html  comprehensive_test_results_20250827_202010.json  config.yml  database_optimization_report_20250827_204524.json  demo_status_logic.py  detailed_security_analysis_20250827_140155.json  final_frontend_test_report.py  (+26 more)
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  multi-agent-setup.sh  nginx.conf  post-create.sh  post-start.sh  setup.sh
.devcontainer/init-scripts/: 01-create-dev-database.sql
.github/: README.md  SECURITY.md  codeql-config.yml  dependabot.yml  pull_request_template.md  setup-complete-repository.sh  setup-repository-security.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  security_report.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dependency-updates.yml  deploy.yml  deployment.yml  pages.yml  pr-quality-gates.yml  release.yml  security-monitoring.yml  security-scan.yml  update-actions.yml
.test-venv/: pyvenv.cfg
.zap/: rules.tsv
app/: __init__.py  database.py  database_optimizer.py  logging_config.py  models.py  models_booking.py  routes_admin.py  routes_appointments.py  routes_help.py  routes_legal.py  routes_public.py
app/middleware/: security_middleware.py
app/services/: analytics.py  backup_manager.py  booking.py  cache.py  config_service.py  database_health.py  date_formatter.py  datetime_validator.py  exception_engine.py  geocoding.py  help_system.py  i18n.py  kiosk_rotation.py  legal_compliance.py  qr.py  (+9 more)
config/: performance.yml  security.yml
data/: portal.db-shm  portal.db-wal
docs/: API_DOCUMENTATION.md  CONFIGURATION_REFERENCE.md  FINAL_IMPLEMENTATION_ROADMAP.md  INSTALLATION.md  PRINTABLE_REFERENCES.md  QUICK_REFERENCE.md  QUICK_START_FIXES.md  SECURITY.md  TROUBLESHOOTING.md  USER_MANUAL.md  VISUAL_GUIDES.md
migration_package/: MIGRATION_INSTRUCTIONS.md  data_export.json  postgresql_schema.sql
scripts/: database_optimization.py  quick-fixes.sh
tests/: test_app.py  test_exception_engine.py  test_next_opening_calculator.py  test_security_validation.py
(+88 files in other folders)
